# Atomic_Habits_SPA

./: .env.sample  README.md  coverage_report.txt  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
Atomic_Habits_SPA/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
habits/: admin.py  models.py  serialaizers.py  services.py  task.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_frequency_enjoyablehabit_and_more.py  0003_alter_enjoyablehabit_user.py  0004_alter_enjoyablehabit_user.py  0005_alter_enjoyablehabit_user.py  0006_alter_habit_user.py  0007_alter_habit_nice_habit_delete_enjoyablehabit.py  0008_rename_nice_habit_habit_is_nice_habit.py  0009_alter_habit_is_nice_habit.py  0010_alter_habit_is_nice_habit.py  0011_alter_habit_time_spent.py  0012_habit_associated_habit.py  0013_habit_start_date.py  0014_alter_habit_start_date.py
users/: admin.py  models.py  permissions.py  views.py
users/migrations/: 0001_initial.py  0002_user_tg_chat_id.py
